# ChurnModelDeployment

./: 0.ipynb  0_data_prep.ipynb  0_data_prep_fixed.ipynb  1_base_model_train.ipynb  2_kfold_validation.ipynb  3_multi_model_training.ipynb  4_hyper_parameter_tunings.ipynb  5_threshold_optimization.ipynb  README.md  enhanced_code_examples.md  enhanced_notebooks_guide.md  main.py  notebook_enhancements.md  pyproject.toml  req.txt  requirements.txt  sample_enhanced_notebook.md
.kiro/steering/: product.md  structure.md  tech.md
artifacts/: X_train.npz
data/processed/: x_transformed.csv
